Subject: Conditional Styling Fixed for Inputs
Problem: Input labels would overlap input values when the user clicks away from the field and autofocus would not work if the user clicked on the input label.

Solution: Input labels styling now stays in place while input has a value. Autofocus now fixed when user clicks the input label.

Notes: Will next need to add conditional error messages for the inputs.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .header {
     position: absolute;
-    top: 20px;
+    top: 10px;
     width: 100%;
 }
 
